@@ -290,6 +290,8 @@ sub _find_caller {
     }
 }
 
+__PACKAGE__->meta->make_immutable;
+
 __PACKAGE__;
 
 __END__
