@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Authorization::ACL
 
+        - fix 'uninitialized' warning in tests
+
 0.13  2009-09-26 03:34:16
         - fix use of $dispatcher->tree warning
         - fix actions in testapp warning
